--- a/my_solution/formsexercise.html
+++ b/my_solution/formsexercise.html
@@ -11,5 +11,32 @@
     <!-- All inputs are required -->
     <!-- All inputs need placeholder text -->
     <!-- Add a button at the end to submit the form-->
+    <form action="/login">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="bob123"
+        required
+      />
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="bob@gmail.com"
+        required
+      />
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        placeholder="your password"
+        name="password"
+        required
+      />
+      <button>Login</button>
+    </form>
   </body>
 </html>
